pom cleaned + test running